[gd_scene load_steps=3 format=3 uid="uid://dkgv8e08fxv1l"]

[ext_resource type="Script" uid="uid://d1anseknfj0e" path="res://scripts/arrow_keys.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://c32t65rydv88j" path="res://sprites/empty_arrow.png" id="2_0wfyh"]

[node name="main" type="Node2D"]

[node name="Node2D" type="Node2D" parent="." node_paths=PackedStringArray("arrow_up", "arrow_down", "arrow_left", "arrow_right")]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_0wfyh")
arrow_up = NodePath("arrow_up")
arrow_down = NodePath("arrow_down")
arrow_left = NodePath("arrow_left")
arrow_right = NodePath("arrow_right")

[node name="arrow_up" type="Sprite2D" parent="Node2D"]
position = Vector2(164, 189.2)
texture = ExtResource("2_0wfyh")

[node name="arrow_right" type="Sprite2D" parent="Node2D"]
position = Vector2(279.2, 189.2)
rotation = 1.5708
texture = ExtResource("2_0wfyh")

[node name="arrow_left" type="Sprite2D" parent="Node2D"]
position = Vector2(237.6, 189.2)
rotation = -1.5708
texture = ExtResource("2_0wfyh")

[node name="arrow_down" type="Sprite2D" parent="Node2D"]
position = Vector2(199.2, 189.2)
rotation = 3.14159
texture = ExtResource("2_0wfyh")
